--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -236,7 +236,7 @@
         <tr>
           <td colspan="1" rowspan="2" style="vertical-align: top;"><big>Processor
               </big></td>
-          <td style="vertical-align: top;"><big>Intel Pentium II 400 mhz for
+          <td style="vertical-align: top;"><big>Intel Pentium II 400 MHz for
               32-bit system </big></td>
         </tr>
         <tr>
@@ -875,7 +875,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       <span style="text-decoration: underline;">Important remark</span><br>
       <br>
-      A new image replace current image if current image already exist.
+      A new will image replace current image if current image already exist.
       Incorrect images will ignore and don't load.<br>
       <br>
       <span style="text-decoration: underline;">Supported format<br>
@@ -1752,7 +1752,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <big><span style="text-decoration: underline;"></span> </big><big><span style="text-decoration: underline;">Visible
         object</span></big><br>
     <big> </big><br>
-    <big> Any visible object is a textured rectangles.</big><br>
+    <big> Any visible object is a textured rectangle.</big><br>
     <big> </big><br>
     <big> <span style="text-decoration: underline;">Images</span></big><br>
     <big> </big><br>
@@ -1806,6 +1806,7 @@ Multimedia API</a>. </big>
           predefined constants. You can see it below.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
+
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1876,8 +1877,8 @@ Multimedia API</a>. </big>
         1.4.6 – New subsystem added. Windows 2000 support removed.<br>
       </big><big>1.4.7 – 1.4.8 – Sprite subsystem improved.<br>
         1.4.9 – Text subsystem improved.<br>
-        1.5 – Small changes. </big><big> 1.5.1 – Optional software render
-        added.<br>
+        1.5 – Small changes.</big><big><br>
+        1.5.1 – Optional software render added.<br>
         1.5.2 – </big><big>1.5.7 –</big><big> Small changes.<br>
       </big></span><span><big>1.5.8 – Keyboard input improved.<br>
       </big></span><span><big>1.5.9 – Mouse input improved.<br>
@@ -2105,6 +2106,6 @@ Multimedia API</a>. </big>
         6.0.9 – 6.1.1 – Small changes.<br>
         6.1.2 – Text drawing subsystem improved.<br>
         6.1.3 – Small changes.<br>
-      </big></span>
+      </big></span><span><big> 6.1.3.1 – Documentation updated.</big></span><br>
   </body>
 </html>
