--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -1806,7 +1806,6 @@ Multimedia API</a>. </big>
           predefined constants. You can see it below.</big></p>
       <big> </big>
       <table style="text-align: left; width: 519px; height: 94px;" cellspacing="2"
-
         cellpadding="2" border="1">
         <tbody>
           <tr>
@@ -1953,7 +1952,7 @@ Multimedia API</a>. </big>
         2.7.8 – 2.7.9 – Small changes.<br>
         2.8 – Go back to old stable branch.<br>
         2.8.1 – 2.8.5 – Small changes.<br>
-        2.8.6 – Merge old branch and new branch.<br>
+        2.8.6 – Merge the old branch and new branch.<br>
         2.8.7 – Small bug fixed.<br>
         2.8.8 – 2.9.9 – Small changes.<br>
         3.0 – Base graphics subsystem improved.<br>
@@ -2106,6 +2105,8 @@ Multimedia API</a>. </big>
         6.0.9 – 6.1.1 – Small changes.<br>
         6.1.2 – Text drawing subsystem improved.<br>
         6.1.3 – Small changes.<br>
-      </big></span><span><big> 6.1.3.1 – Documentation updated.</big></span><br>
+      </big></span><span><big> 6.1.3.1 – Documentation updated.<br>
+        6.1.4 – Small bug fixed.<br>
+      </big></span>
   </body>
 </html>
