--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -601,7 +601,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       pixel. A transparent mode enabled by default.<br>
       <br style="text-decoration: underline;">
       <span style="text-decoration: underline;">Work with base sprite subsystem</span><br
-
         style="text-decoration: underline;">
       <br>
       <span style="font-style: italic;">Billboard</span> class provide simple
@@ -720,7 +719,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       empty.<br>
       <span style="font-style: italic;">void Sprite::destroy_sprite();</span> –
       Destroy a sprite image and destroy a sprite texture.<span style="font-style: italic;"></span></big><big><span
-
         style="font-style: italic;"></span><br>
     </big> <big><br>
       <span style="text-decoration: underline;">Sprite texture</span><br>
@@ -751,9 +749,17 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <span style="font-style: italic;">Picture</span> and <span style="font-style: italic;">Animation</span>.
       Let’s look at public methods.<br>
       <span style="font-style: italic;"></span><span style="font-style: italic;"></span><br>
-    </big><big><span style="font-style: italic;">unsigned int
-        Sheet::calculate(const unsigned int row,const unsigned int column)
-        const;</span> – Calculate the frame by row and column.</big><br>
+    </big><big> <span style="font-style: italic;">unsigned int Sheet::get_row(</span></big><big><span
+        style="font-style: italic;">const unsigned int target</span></big><big><span
+        style="font-style: italic;">) const;</span> – Return row of target
+      frame.<br>
+      <span style="font-style: italic;">unsigned int Sheet::get_column(</span></big><big><span
+        style="font-style: italic;">const unsigned int target</span></big><big><span
+        style="font-style: italic;">) const;</span> – Return</big><big> column</big><big>
+    </big><big>of target frame</big><big>.</big><br>
+    <big><span style="font-style: italic;">unsigned int Sheet::calculate(const
+        unsigned int row,const unsigned int column) const;</span> – Calculate
+      the frame by row and column.</big><br>
     <big> <span style="font-style: italic;">unsigned int Sheet::get_rows()
         const;</span> – Return row amount.<br>
       <span style="font-style: italic;">unsigned int Sheet::get_columns() const;</span>
@@ -1608,6 +1614,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         below.</big></p>
     <big> </big>
     <table style="text-align: left; width: 365px; height: 94px;" cellspacing="2"
+
       cellpadding="2" border="1">
       <tbody>
         <tr>
@@ -2112,7 +2119,8 @@ Multimedia API</a>. </big>
         6.1.3 – Small changes.<br>
       </big></span><span><big> 6.1.3.1 – Documentation updated.<br>
         6.1.4 – Small bug fixed.<br>
-        6.1.5 – Sprite sheet subsystem improved.<br>
+        6.1.5 –&nbsp; 6.1.6 – Sprite sheet subsystem improved.<br>
+        6.1.7 – 6.1.8 – Small changes.<br>
       </big></span>
   </body>
 </html>
