--- a/documentation/refrence.html
+++ b/documentation/refrence.html
@@ -2122,6 +2122,7 @@ Multimedia API</a>. </big>
         6.1.5 – 6.1.6 – Sprite sheet subsystem improved.<br>
         6.1.7 – 6.2.1 – Small changes.<br>
         6.2.2 – 6.2.3 – Base graphics subsystem improved.<br>
+        6.2.4 – 6.2.6 – Binary file subsystem improved.<br>
       </big></span>
   </body>
 </html>
