Small bug fixed

--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2090,6 +2090,8 @@ Multimedia API</a>. </big>
       6.2.2 – 6.2.3 – Base graphics subsystem improved.<br>
       6.2.4 – 6.2.6 – Binary file subsystem improved.<br>
       6.2.6.1 – Documentation updated.<br>
+      6.2.7 – Collision detection subsystem improved.<br>
+      6.2.8 – Small bug fixed.<br>
     </big>
     <p></p>
   </body>
