--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -368,7 +368,8 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
     <h1><a name="mozTocId760374" class="mozTocH1"></a><big>Part 3. Graphics</big></h1>
     <h2><a name="mozTocId182571" class="mozTocH2"></a><big>Chapter 1. The
         sub–namespace</big></h2>
-    <big>All subsystems in this section declared in Graphics sub–namespace.</big><br>
+    <big>All subsystems in this section declared in <i>Graphics</i>
+      sub–namespace.</big><br>
     <big> </big>
     <h2><a name="mozTocId552078" class="mozTocH2"></a><big>Chapter 2. Base
         graphics subsystem</big></h2>
@@ -377,6 +378,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         subsystem</span><br>
       <br>
       Base graphics subsystem do rendering game scene. This subsystem using <a
+
         href="http://opengl.org">OPENGL</a> for render. Most modern video–card
       support hardware accelerated OPENGL. Software emulated OPENGL will
       activate if </big><big>hardware acceleration not available.</big><br>
@@ -2092,6 +2094,7 @@ Multimedia API</a>. </big>
       6.2.6.1 – Documentation updated.<br>
       6.2.7 – Collision detection subsystem improved.<br>
       6.2.8 – Small bug fixed.<br>
+      6.2.9 – Small changes.<br>
     </big>
     <p></p>
   </body>
