--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2090,6 +2090,7 @@ Multimedia API</a>. </big>
       6.2.8 – Small bug fixed.<br>
       6.2.9 – Small changes.<br>
       6.3 – Base sprite subsystem improved.<br>
+      6.3.1 – Small changes.<br>
     </big>
     <p></p>
   </body>
