--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -607,7 +607,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
         Billboard::set_transparent(const bool enabled);</span> – Enable or
       disable the transparent mode.<br>
       <span style="font-style: italic;"> bool Billboard::get_transparent()
-        const;</span> – Return true if transparent mode is enabled.<br>
+        const;</span> – Return true if transparent mode is enable.<br>
     </big><big><span style="font-style: italic;">void
         Billboard::set_position(const unsigned int x, const unsigned int y);</span>
       – Set sprite position.<br>
@@ -2096,6 +2096,7 @@ Multimedia API</a>. </big>
       6.3.3 – Base graphics subsystem ported from Neon game development kit
       5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
+      6.3.5 – Small changes.<br>
     </big>
     <p></p>
   </body>
