--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -316,7 +316,6 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       optimization.<br>
       <br>
       <span style="text-decoration: underline;"> Note for Visual C++ users</span><br
-
         style="text-decoration: underline;">
       <br>
       Disable pre–compiled headers before start compilation. Old Visual C++
@@ -535,7 +534,7 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       <br>
       Just use <span style="font-style: italic;">Background</span> class to
       work with background. Let's look at public methods.<br>
-    </big><big></big><big><br style="font-style: italic;">
+    </big><big><br style="font-style: italic;">
       <span style="font-style: italic;"> void Background::prepare(const Screen
         *screen);</span> – Prepare for drawing.<br>
       <span style="font-style: italic;"> void Background::prepare(Screen
@@ -554,14 +553,25 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       scrollable.<br>
       <span style="font-style: italic;"> void Background::load_background(Image
         *background,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
-      – Load background and set it setting.<br>
+      – Load background </big><big>from the buffer</big><big> and set it
+      setting.<br>
       <span style="font-style: italic;"> void Background::load_background(Image
         &amp;background,const EUGENEGDK::IMAGE_KIND kind,const unsigned int
-        frames);</span> – Load background and set it setting.<br>
+        frames);</span> – Load background </big><big>from the buffer</big><big>
+      and set it setting.<br>
       <span style="font-style: italic;"> void Background::load_background(Image
-        *background);</span> – Load normal background.<br>
+        *background);</span> – Load normal background from the buffer.<br>
       <span style="font-style: italic;"> void Background::load_background(Image
-        &amp;background);</span> – Load normal background.<br>
+        &amp;background);</span> – Load normal background </big><big>from the
+      buffer</big><big>.<br>
+      <span style="font-style: italic;">void Background::load_background(const
+        char *name,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
+      – Load background </big><big>from target file</big><big> and set it
+      setting.<br>
+      <span style="font-style: italic;">void Background::load_background(</span></big><big
+
+      style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
+      – Load normal background from target file.<br>
       <span style="font-style: italic;"> void Background::draw_background();</span>
       – Draw a background.<br>
       <span style="font-style: italic;"> void Background::destroy_image();</span>
@@ -685,14 +695,21 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       sprite setting. Last argument will ignore if sprite not animated.<br>
       <span style="font-style: italic;"> void Sprite::load_sprite(Image
         *buffer,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
-      – Load a sprite and set it setting.<br>
+      – Load a sprite from the buffer and set it setting.<br>
       <span style="font-style: italic;"> void Sprite::load_sprite(Image
-        *buffer);</span> – Load a normal sprite.<br>
+        *buffer);</span> – Load a normal sprite </big><big>from the buffer</big><big>.<br>
       <span style="font-style: italic;"> void Sprite::load_sprite(Image
         &amp;buffer,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
-      – Load a sprite and set it setting.<br>
+      – Load a sprite </big><big>from the buffer</big><big> and set it setting.<br>
       <span style="font-style: italic;"> void Sprite::load_sprite(Image
-        &amp;buffer);</span> – Load a normal sprite.<br>
+        &amp;buffer);</span> – Load a normal sprite </big><big>from the buffer</big><big>.<br>
+      <span style="font-style: italic;">void Sprite::load_sprite(const char
+        *name,const EUGENEGDK::IMAGE_KIND kind,const unsigned int frames);</span>
+      – Load a sprite </big><big>from target file</big><big> and set it
+      setting.<br>
+      <span style="font-style: italic;">void Sprite::load_sprite(</span></big><big
+      style="font-style: italic;">const char *name</big><big><span style="font-style: italic;">);</span>
+      – Load a normal sprite from target file.<br>
       <span style="font-style: italic;"> void Sprite::set_target(const unsigned
         int target);</span> – Set target frame in strip.<br>
       <span style="font-style: italic;"> void Sprite::step();</span> – Increase
@@ -765,10 +782,13 @@ C++ Redistributable Packages</a> if you game code compiled under Visual C++.
       more than frame amount.</big><br>
     <big><span style="font-style: italic;"> void Sheet::load_tileset(Image
         *sheet,const unsigned int row_amount,const unsigned int column_amount);</span>
-      – Load a sprite sheet.<br>
+      – Load a sprite sheet from the buffer.<br>
       <span style="font-style: italic;"> void Sheet::load_tileset(Image
         &amp;sheet,const unsigned int row_amount,const unsigned int
-        column_amount);</span> – Load a sprite sheet.<br>
+        column_amount);</span> – Load a sprite sheet from the buffer.<br>
+      <span style="font-style: italic;">void Sheet::load_tileset(const char
+        *name,const unsigned int row_amount,const unsigned int column_amount);</span>
+      – Load a sprite sheet from tagret file.<br>
       <br>
       <span style="text-decoration: underline;"> Sprite sheet texture</span><br>
       <br>
@@ -2097,6 +2117,9 @@ Multimedia API</a>. </big>
       5.8.4.<br>
       6.3.4 – Visual C++ 2005 support added.<br>
       6.3.5 – Small changes.<br>
+      6.3.6 – Ordinary sprite subsystem improved.<br>
+      6.3.7 – Sprite sheet subsystem improved.<br>
+      6.3.8 – Background subsystem improved.<br>
     </big>
     <p></p>
   </body>
