--- a/documentation/refrence.htm
+++ b/documentation/refrence.htm
@@ -2123,6 +2123,7 @@ Multimedia API</a>. </big>
       6.3.7 – Sprite sheet subsystem improved.<br>
       6.3.8 – Background subsystem improved.<br>
       6.3.9 – Text drawing subsystem improved.<br>
+      6.4 – Small changes.<br>
     </big>
     <p></p>
   </body>
